scrollbar not hidden by nav, fixed broken css in about and contact

--- a/styles/About.module.less
+++ b/styles/About.module.less
@@ -58,7 +58,7 @@
       .buttonContainer {
         display: grid;
         grid-template-rows: 1fr 1fr;
-        grid-template-columns: 192px;
+        grid-template-columns: repeat(2, 250px);
 
         .firstbtn {
           grid-row: 1;
