--- a/styles/Nav.module.less
+++ b/styles/Nav.module.less
@@ -8,7 +8,7 @@
   justify-content: flex-start;
   z-index: 10;
   position: absolute;
-  width: 100vw;
+  width: calc(100vw - 16px);
   position: fixed;
   top: 0;
 
