--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,3 +93,33 @@ html {
   width: 100%;
   background: var(--very-dark);
 }
+
+@media (min-width: 701px) {
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #a333273b #0f0707;
+  }
+
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #0f0707;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #a333273b;
+    border-radius: 10px;
+    border: 3px solid #0f0707;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+}
